--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 
       <section class="advantages section">
         <div class="container container-advantages">
-          <h2 class="title visually-hidden">Advantages</h2>
+          <h2 class="visually-hidden">Advantages</h2>
           <ul class="advantages-list">
             <li class="advantages-item">
               <h3 class="advantages-title">Strategy</h3>
